--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="cont">
         <class="form">
-            <h2>sign-in form</h2>
+            
             <label>
                 <span> Email <Address></Address> </span>
                 <input type="email" name="email">
@@ -34,9 +34,9 @@
 
             <div class="social-media">
                 <ul>
-                    <li><img src="javascript.jpg" alt="javascript image"></li>
-                    <li><img src="angular.jpg" alt="angular image"></li>
-                    <li><img src="phython.jpg" alt="phython image"></li>
+                    <li><img src="facebook.jpg" alt="facebook image"></li>
+                    <li><img src="twitter.jpg" alt="twitter image"></li>
+                    <li><img src="instagram.jpg" alt="instagram image"></li>
 
                 </ul>
             </div>
