--- a/signUp.html
+++ b/signUp.html
@@ -15,65 +15,18 @@
     <input type="text" name= "name" id="name" placeholder="full Name" required> 
     </div>
     <div>
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" aria-required="">
+        </div>
+    <div>
     <label for="password">Password</label>
     <input type="password" password = "password" required> 
     </div>
     <div>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" aria-required="">
+        <label for="confirm_password">confirm Password</label>
+        <input type="password" password = "password" required> 
         </div>
-        <div>
-            <label for="age">age</label>
-            <input type="number" name="age" id="age" min="18" max="35">
-            </div>
-            <div>
-                <label for="date">Date</label>
-                <input type="date" name="date" id="date">
-                </div>
-                <div>
-                    please choose your favourite fruits
-                <label for="banana">banana</label>
-
-                 <input type="checkbox" name="banana" id="banana">
-                    </div>
-
-                <div>
-                    <label for="water mellon">Water Mellon</label>
-                    <input type="checkbox" name="water mellon" id="water mellon"   
-                </div>
-                <div>
-                <label for="mango">Mango</label>
-                <input type="checkbox" name="mango" id="mango">
-                </div>
-                Sex
-                <div>
-
-                    <label for="female">Female</label>
-                    <input type="radio" name="gender" id="female">
-                </div>
-                <div>
-                    <label for="male">Male</label>
-                    <input type="radio" name="gender" id="male">
-                </div>
-                <div>
-                    <label for="eyecolour">Eyecolour</label>
-                    <select name="eyecolour id="eyecolour">
-                        <option value="green">Brown</option>
-                        <option value="black">Black</option>
-                    </select>
-
-                </div>
-               <h3>Marital status</h3> 
-                <div>
-                    <label>Married</label>
-                    <input type="radio" name="yes" id="yes">
-
-                </div>
-                <div>
-                    <label for>Single</label>
-                    <input type="radio" name="yes" id="yes">
-                </div>
-
+    
     <button type="submit">Submit</button>
     <button type="reset">Reset</button>
     </form>
